# Colink

./: .gitignore  .golangci.yml  AGENTS.md  CLAUDE.md  Makefile  README.md  go.mod  go.sum  package-lock.json  package.json
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.dev.yml  post-create.sh
.omc/: notepad.md  prd.json  progress.txt  project-memory.json
auto-test/: .migration-verified  feature-map.yaml  package.json
cmd/: check_agents.go
configs/: config.yaml.example
docs/: ACP-stderr实现记录-20260602-1630.md  ACP错误处理改进-20260602-1600.md  CHANGELOG.md  ROADMAP.md  TeamGraphEditor自动布局实施完成-2026-04-23.md  a2a-clowder-ai-analysis.md  a2a-comparison-report.md  acp-mcp-config-analysis.md  agent-context-engineering-analysis.md  agent-invocation-and-memory-analysis.md  cli-output-code-review-20260508.md  cli-output-plan-review-20260508.md  cli-output-qa-report-20260508.md  cli-output-stdout-review-20260508.md  (+66 more)
installer-tauri/src-tauri/: Cargo.toml  tauri.conf.json  tauri.launcher.conf.json
installer-tauri/src-tauri/capabilities/: default.json
installer-tauri/src-tauri/resources/: .gitkeep  installer-config.json
installer-tauri/src-tauri/src/: error.rs  lib.rs  main.rs  store.rs
installer-tauri/src-tauri/src/commands/: config.rs  dependency.rs  install.rs  invite.rs  launcher.rs  mod.rs  mode.rs  service.rs  uninstall.rs  window.rs
installer-tauri/src-tauri/src/services/: bundle.rs  config.rs  dependency.rs  disk_space.rs  file_ops.rs  installer.rs  invite.rs  mod.rs  plist.rs  registry.rs  service_manager.rs  shortcut.rs  uninstall.rs
(+1502 files in other folders)
