[package]
name = "colink-installer"
version = "1.0.0"
description = "Colink Windows Installer (Tauri)"
authors = ["Colink Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
tauri-plugin-process = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-log = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
thiserror = "2"
anyhow = "1"
dirs = "5"
tempfile = "3"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
reqwest = { version = "0.12", features = ["json", "blocking"] }

[target.'cfg(windows)'.dependencies]
winreg = "0.52"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
codegen-units = 1
lto = "thin"
opt-level = "s"
strip = "symbols"
